k8_project/mongo_project/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: mongo-project
  labels:
    app: mongodb   # deployment label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb   # deployment loog for this lable name in pods
  template:
    metadata:
      labels:
        app: mongodb  # label for pod, this lable referece shoule be same as in matchLabels in deployment
        facing: backend
        version: v1
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017   # mongo DB listens on 27017 port for requests
