k8_project/mongo_project/mongoexpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: mongo-project
spec:
  selector:
    app: mongo-express    # select pods with label mongo-express
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 8081          # port on the service
      targetPort: 8081    # pod port
      nodePort: 30000      # service is exposed to 30000 port for external traffic
