k8_project/mongo_project/mongoexpress-service_cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service-cluster
  namespace: mongo-project
spec:
  selector:
    app: mongo-express    # select pods with label mongo-express
  ports:
    - protocol: TCP
      port: 80          # port on the service
      targetPort: 8081    # pod port
