k8_project/mongo_project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: mongo-project
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: test-vikas-mongo-project.com
      http:
        paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: mongo-express-service-cluster
              port: 
                number: 80
